- directive usage ways - examples

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -23,17 +23,17 @@
     <tr>
       <th>
         Index
-        <i data-sort-icon
-           data-sort-icon-attr="index"
-           data-sort-icon-click="setSort"
-           data-sort-icon-sort="sort"></i>
+        <sort-icon
+          data-sort-icon-attr="index"
+          data-sort-icon-click="setSort"
+          data-sort-icon-sort="sort"></sort-icon>
       </th>
       <th>
         Picture
       </th>
       <th>
         Active?
-        <i data-sort-icon
+        <i class="sort-icon"
            data-sort-icon-attr="isActive"
            data-sort-icon-click="setSort"
            data-sort-icon-sort="sort"></i>
